2009-04-01  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Release 1.0.4

2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.3

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

2009-03-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* mpidep.cc (getConfig): Don't reports errors here.  Leave that to
	utils/music.cc; Skip optional arguments when looking for config
	file name.

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0
	
2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, mpidep.hh, mpidep.cc: New files.
