@@ -1,3 +1,8 @@
+2009-10-04  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* mpidep.cc (getRank): Handle rank 0 and correctly detect cases
+	where command line has unexpected form.
+
 2009-04-01  Mikael Djurfeldt  <djurfeldt@nada.kth.se>
 
 	* Release 1.0.4
@@ -23,7 +28,7 @@
 2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Release 1.0
-	
+
 2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Makefile.am, mpidep.hh, mpidep.cc: New files.
